--- a/assets/Styles/styles.scss
+++ b/assets/Styles/styles.scss
@@ -10,8 +10,13 @@
     font-size: 1.5em;
     border-bottom: 2px solid;
     width: 60%;
-    margin: 5% auto;
+    margin: 20% auto 5%;
     text-align: center;
+}
+@media screen and (min-width: 1024px){
+    .section_heading{
+        margin: 8% auto 2%;
+    }
 }
 
 main{
@@ -62,7 +67,8 @@ main{
     }
     @media screen and (min-width: 1024px){
         .Hero{
-            height: 95vh;
+            height: 95vh; 
+            width: 98.9vw;           
             background: unset; 
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -121,6 +127,15 @@ main{
             }
         }
     }
+    @media screen and (min-width: 1024px){
+        .About{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            .about_image{
+                margin-top: 4em;
+            }
+        }
+    }
 
 
 
@@ -128,7 +143,7 @@ main{
         .service{
             h1{
                 font-size: 1.2em;
-                font-weight: bold;
+                font-weight: bold;                
             }
             h2{
                 font-size: 1em;
