--- a/assets/Styles/navbar.css
+++ b/assets/Styles/navbar.css
@@ -8,7 +8,7 @@
     align-items: center;
     min-height: 8vh;
     padding: 3px;
-    background: black;
+    background: linear-gradient(rgba(0, 29, 0, 1.0), rgba(0, 27, 0, 1.0));
     font-family: sans-serif, helvetica;
   }
   
