--- a/assets/Styles/navbar.css
+++ b/assets/Styles/navbar.css
@@ -10,6 +10,7 @@
     padding: 3px;
     background: linear-gradient(rgba(0, 29, 0, 1.0), rgba(0, 27, 0, 1.0));
     font-family: sans-serif, helvetica;
+    z-index: 10;
   }
   
   .logo h1 {
@@ -50,7 +51,7 @@
   
   @media screen and (max-width: 1024px) {
     .nav_links {
-      width: 60%;
+      width: 50%;
     }
   }
   @media screen and (max-width: 760px) {
