--- a/assets/Styles/styles.scss
+++ b/assets/Styles/styles.scss
@@ -50,12 +50,16 @@ main{
                 margin: 12px;
             }
         }
+        .about_images{
+            display: none;
+        }
     }
+
     .Footer{
         background: #000;
         color: #efefef;
         text-align: center;
-        padding: 12px 0;                
+        padding: 12px 0; 
     }
 
     @media screen and (min-width: 726px){
@@ -93,7 +97,67 @@ main{
                 }
             }
         }
-
+        .Home_about{
+            display: flex;
+            align-items: center;
+            height: 100vh;
+            .about_text{
+                display: flex;
+                flex-direction: column;
+                align-items: center; 
+                width: 60%; 
+                text-align: left;         
+                font-size: 1.2em;
+                z-index: 5;
+                p{
+                    margin: 5px;
+                }
+            }
+            .about_images{
+                display: block;
+                position: relative;
+                width: 40%;
+                height: 100%;
+                ul{
+                    list-style: none;
+                    li{
+                        position: absolute;
+                        img{
+                            width: 300px;
+                            z-index: -10;
+                        }
+                    }
+                    li:nth-child(1){
+                        img{
+                        margin: 10px 0 0 -250px;  
+                        width: 350px;                                               
+                        }                  
+                    }   
+                    li:nth-child(2){
+                        img{
+                            margin: 50px 0 0 60px;
+                            width: 200px;
+                        }
+                    } 
+                    li:nth-child(3){
+                        img{
+                            margin: 260px 0 0 190px;
+                        }
+                    }  
+                    li:nth-child(4)              {
+                        img{
+                            margin: 425px 0 0 80px;
+                            width: 200px;
+                        }
+                    }
+                    li:nth-child(5){
+                        img{
+                            margin: 420px 0 0 -250px;
+                        }
+                    }
+                }
+            }
+        }
         
 
 
