--- a/assets/Styles/styles.css
+++ b/assets/Styles/styles.css
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 .section_heading {
   text-transform: uppercase;
@@ -10,12 +11,15 @@
   border-bottom: 2px solid;
   width: 60%;
   margin: 20% auto 5%;
-  text-align: center; }
+  text-align: center;
+}
 
 @media screen and (min-width: 1024px) {
   .section_heading {
-    margin: 8% auto 2%; } }
-
+    margin: 5% auto 2%;
+    width: 30%;
+  }
+}
 main .Hero {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url("../Images/DATA CENTER.jpg");
   background-position: center;
@@ -23,129 +27,176 @@ main .Hero {
   height: 60vh;
   width: 100vw;
   display: flex;
-  align-items: center; }
-  main .Hero .hero_text {
-    margin: auto; }
-    main .Hero .hero_text h1 {
-      color: #fff;
-      text-transform: uppercase;
-      text-align: center;
-      font-size: 1.5em; }
-      main .Hero .hero_text h1 span {
-        color: #69a50e; }
-  main .Hero .hero_image {
-    display: none; }
-
+  align-items: center;
+}
+main .Hero .hero_text {
+  margin: auto;
+}
+main .Hero .hero_text h1 {
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+main .Hero .hero_text h1 span {
+  color: rgb(105, 165, 14);
+}
+main .Hero .hero_image {
+  display: none;
+}
 main .Home_about .about_text p {
-  margin: 12px; }
-
+  margin: 12px;
+}
 main .Home_about .about_images {
-  display: none; }
-
+  display: none;
+}
 main .Footer {
   background: #000;
   color: #efefef;
+  padding: 12px 0;
+}
+main .Footer .footer_details a {
+  color: #efefef;
+}
+main .Footer .footer_details h1 {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
+  text-align: left;
+  margin: 5% auto;
+}
+main .Footer .footer_p {
+  border-top: 1px solid;
+  padding: 10px;
   text-align: center;
-  padding: 12px 0; }
-
+}
 @media screen and (min-width: 726px) {
   main .Footer {
     position: absolute;
     width: 100%;
-    bottom: 0; } }
-
+    bottom: 0;
+  }
+}
 @media screen and (min-width: 1024px) {
   main .Hero {
     height: 95vh;
     width: 98.9vw;
     background: unset;
     display: grid;
-    grid-template-columns: 1fr 1fr; }
-    main .Hero .hero_text {
-      width: 90%;
-      margin: auto; }
-      main .Hero .hero_text h1 {
-        color: #000;
-        font-size: 1.7em; }
-        main .Hero .hero_text h1 span {
-          font-size: 1.7em; }
-    main .Hero .hero_image {
-      display: block;
-      height: 100%; }
-      main .Hero .hero_image img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover; }
+    grid-template-columns: 1fr 1fr;
+  }
+  main .Hero .hero_text {
+    width: 90%;
+    margin: auto;
+  }
+  main .Hero .hero_text h1 {
+    color: #000;
+    font-size: 1.7em;
+  }
+  main .Hero .hero_text h1 span {
+    font-size: 1.7em;
+  }
+  main .Hero .hero_image {
+    display: block;
+    height: 100%;
+  }
+  main .Hero .hero_image img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
   main .Home_about {
-    display: flex;
-    align-items: center;
-    height: 100vh; }
-    main .Home_about .about_text {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 60%;
-      text-align: left;
-      font-size: 1.2em;
-      z-index: 5; }
-      main .Home_about .about_text p {
-        margin: 5px; }
-    main .Home_about .about_images {
-      display: block;
-      position: relative;
-      width: 40%;
-      height: 100%; }
-      main .Home_about .about_images ul {
-        list-style: none; }
-        main .Home_about .about_images ul li {
-          position: absolute; }
-          main .Home_about .about_images ul li img {
-            width: 300px;
-            z-index: -10; }
-        main .Home_about .about_images ul li:nth-child(1) img {
-          margin: 10px 0 0 -250px;
-          width: 350px; }
-        main .Home_about .about_images ul li:nth-child(2) img {
-          margin: 50px 0 0 60px;
-          width: 200px; }
-        main .Home_about .about_images ul li:nth-child(3) img {
-          margin: 260px 0 0 190px; }
-        main .Home_about .about_images ul li:nth-child(4) img {
-          margin: 425px 0 0 80px;
-          width: 200px; }
-        main .Home_about .about_images ul li:nth-child(5) img {
-          margin: 420px 0 0 -250px; }
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    place-items: center;
+  }
+  main .Home_about .about_text {
+    font-size: 1.1rem;
+    z-index: 10;
+  }
+  main .Home_about .about_images {
+    display: block;
+  }
+  main .Home_about .about_images ul li img {
+    width: 300px;
+  }
+  main .Home_about .about_images ul li:nth-child(1) {
+    margin: 1.2em 0 0 -21em;
+  }
+  main .Home_about .about_images ul li:nth-child(2) {
+    margin: -2.8em 0 0 -1.5em;
+    width: 100px;
+  }
+  main .Home_about .about_images ul li:nth-child(2) img {
+    width: 200px;
+  }
+  main .Home_about .about_images ul li:nth-child(3) {
+    margin: 1em 0 0 1em;
+  }
+  main .Home_about .about_images ul li:nth-child(4) {
+    margin: 2em 0 0 -6em;
+  }
+  main .Home_about .about_images ul li:nth-child(4) img {
+    width: 200px;
+  }
+  main .Home_about .about_images ul li:nth-child(5) {
+    margin: -3em 0 0 -25em;
+  }
   main .Footer {
-    position: unset; } }
-
+    position: unset;
+  }
+  main .Footer .footer_details {
+    display: block;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  main .Footer .footer_details .footer_wrapper h1, main .Footer .footer_details .footer_wrapper .info {
+    width: 50%;
+  }
+  main .Footer .footer_details .footer_wrapper .info {
+    margin: auto;
+  }
+  main .Footer .footer_details .footer_wrapper .info p {
+    text-align: left;
+  }
+}
 main .About .about_text h1 {
-  padding: 15px 0 0; }
-
+  padding: 15px 0 0;
+}
 main .About .about_image img {
-  max-width: 100%; }
-
+  max-width: 100%;
+}
 main .About .about_image .address {
-  margin-bottom: 5%; }
-  main .About .about_image .address p {
-    margin: unset; }
-
+  margin-bottom: 5%;
+}
+main .About .about_image .address p {
+  margin: unset;
+}
 main .About .about_image .contacts p {
-  margin: unset; }
-
+  margin: unset;
+}
 @media screen and (min-width: 1024px) {
   main .About {
     display: grid;
-    grid-template-columns: 1fr 1fr; }
-    main .About .about_image {
-      margin-top: 4em; } }
-
+    grid-template-columns: 1fr 1fr;
+  }
+}
 main .Services .service h1 {
   font-size: 1.2em;
-  font-weight: bold; }
-
+  font-weight: bold;
+}
 main .Services .service h2 {
   font-size: 1em;
-  font-weight: bold; }
-
+  font-weight: bold;
+}
 main .Services .service img {
-  max-width: 100%; }
+  max-width: 100%;
+}
+@media screen and (min-width: 1024px) {
+  main .service img {
+    width: 400px;
+  }
+}/*# sourceMappingURL=styles.css.map */
