--- a/assets/Styles/styles.css
+++ b/assets/Styles/styles.css
@@ -20,6 +20,118 @@
     width: 30%;
   }
 }
+header {
+  /* navbar */
+  /* navbar */
+}
+header .nav_wrapper {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+header .nav_bar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 6vh;
+  padding: 3px;
+  background: black;
+  font-family: sans-serif, helvetica;
+}
+header .logo h1 {
+  color: #efefef;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 16px;
+  font-weight: bold;
+}
+header .nav_links {
+  display: flex;
+  justify-content: space-around;
+  width: 40%;
+  list-style: none;
+}
+header .nav_links a {
+  color: #efefef;
+  text-decoration: none;
+  letter-spacing: 2px;
+  font-weight: bold;
+  font-size: 14px;
+}
+header .burger {
+  display: none;
+  cursor: pointer;
+}
+header .burger div {
+  width: 25px;
+  height: 2px;
+  background-color: #efefef;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+@media screen and (max-width: 1024px) {
+  header .nav_links {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 760px) {
+  header body {
+    overflow-x: hidden;
+  }
+  header .nav_links {
+    position: absolute;
+    right: 0;
+    height: 94vh;
+    top: 6vh;
+    background: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+  header .nav_links li {
+    opacity: 0;
+  }
+  header .burger {
+    display: block;
+  }
+}
+@-webkit-keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+header .nav_active {
+  transform: translateX(0%);
+}
+header .toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+header .toggle .line2 {
+  opacity: 0;
+}
+header .toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
 main .Hero {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url("../Images/DATA CENTER.jpg");
   background-position: center;
@@ -71,6 +183,10 @@ main .Footer .footer_p {
   border-top: 1px solid;
   padding: 10px;
   text-align: center;
+}
+main .Footer .handles iframe {
+  width: 250px;
+  height: 150px;
 }
 @media screen and (min-width: 726px) {
   main .Footer {
