--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -1,3 +1,8 @@
+.Services .content_heading {
+  text-align: center;
+  font-weight: bold;
+  border-bottom: 1px solid black;
+}
 .Services .service h1 {
   font-size: 1.2em;
   font-weight: bold;
