--- a/src/components/Services/services.scss
+++ b/src/components/Services/services.scss
@@ -1,4 +1,9 @@
 .Services{
+    .content_heading{
+        text-align: center;
+        font-weight: bold;
+        border-bottom: 1px solid black;
+    }
     .service{
         h1{
             font-size: 1.2em;
